<resources>
    <string name="app_name">SortMyStuff</string>
    <string name="action_button_detail">View Detail</string>

    <string name="title_activity_contents">ContentsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_hint">Search all assets</string>

    <string name="delete_current_asset">Delete Current Asset</string>
    <string name="main_menu_search_title">Search</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_asset_dialog_title">Add Asset</string>
    <string name="add_asset_confirm_button">Save</string>
    <string name="photo_remove_dialog_title">Remove Photo</string>
    <string name="photo_remove_confirm_button">Yes</string>
    <string name="permission_allow_button">Ok</string>
    <string name="edit_detail_confirm_button">Save</string>

    <string name="contents_page">Contents</string>
    <string name="details_page">Details</string>
    <string name="details_page_categories_title">Categories</string>
    <string name="delete_asset_confirm_button">Confirm</string>

    <string name="nav_drawer_menu_sign_out">Sign Out</string>
    <string name="add_asset_name_hint">Asset name</string>
    <string name="add_asset_photo_description">Asset photo</string>
    <string name="nav_drawer_menu_prservice_offline">PR Service Offline</string>
    <string name="nav_drawer_menu_prservice_inprogress">Recognising photos</string>
    <string name="nav_drawer_menu_prservice_completed">PR Completed</string>
    <string name="nav_drawer_menu_prservice_ready">Ready to recognise</string>
    <string name="contents_photo_description">asset photo</string>
    <string name="asset_more_rename_title">Rename</string>
    <string name="rename_asset_action_title">Rename asset</string>
    <string name="asset_more_delete_title">Delete</string>
    <string name="asset_more_move_title">Move</string>
    <string name="main_menu_sort_title">Sort by</string>
    <string name="sort_menu_by_name_title">Name</string>
    <string name="sort_menu_by_create_title">Recently created</string>
    <string name="sort_menu_by_modify_title">Recently modified</string>
    <string name="sort_menu_by_default_title">Default</string>

    <!--messages-->
    <string name="msg_click_again_to_exit">Click back again to exit</string>
    <string name="pathbar_root"><![CDATA[Assets ⟩]]></string>

</resources>
