...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nz.ac.aut.comp705.sortmystuff.ui.contents.ContentsActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addAssetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorAccent"
        app:srcCompat="@drawable/ic_add_white_48dp"/>
...
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@android:color/darker_gray"
        app:srcCompat="@drawable/ic_cancel_move"
        android:visibility="gone"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/confirm_move_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorAccent"
        app:srcCompat="@drawable/ic_confirm_move"
...
                android:gravity="center"
                android:text="Assets >"
                android:textAppearance="@android:style/TextAppearance"
                android:textColor="@color/dark_grey" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/pathbar_pathview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/pathbar_root"
                android:orientation="horizontal">


...
