<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <ImageView
            android:id="@+id/asset_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/asset_name"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textColor="@color/dark_grey"/>

        <CheckBox
            android:id="@+id/asset_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:buttonTint="@color/colorAccent"/>


</LinearLayout>