...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/detail_appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
...
        android:id="@+id/assetName_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_appBarLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/assetCategory_detail"
        android:layout_toStartOf="@+id/assetCategory_detail"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/colorPrimary"
        android:textSize="34sp"/>

...
